{
  "version": 4,
  "terraform_version": "0.12.20",
  "serial": 157,
  "lineage": "b688f270-dfa3-56c3-2f39-d8aa137483d1",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "data",
      "type": "aws_subnet",
      "name": "private",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:268558157000:subnet/subnet-04cda98e80626f47c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "cidr_block": "10.0.128.0/19",
            "default_for_az": false,
            "id": "subnet-04cda98e80626f47c",
            "map_public_ip_on_launch": false,
            "owner_id": "268558157000",
            "state": "available",
            "tags": {
              "Name": "atlas-operator-mwcdx-private-eu-west-3a",
              "kubernetes.io/cluster/atlas-operator-mwcdx": "owned",
              "kubernetes.io/role/internal-elb": ""
            },
            "vpc_id": "vpc-01095835b1df30896"
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:268558157000:subnet/subnet-0b41b011d2aeb60f0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3b",
            "availability_zone_id": "euw3-az2",
            "cidr_block": "10.0.160.0/19",
            "default_for_az": false,
            "id": "subnet-0b41b011d2aeb60f0",
            "map_public_ip_on_launch": false,
            "owner_id": "268558157000",
            "state": "available",
            "tags": {
              "Name": "atlas-operator-mwcdx-private-eu-west-3b",
              "kubernetes.io/cluster/atlas-operator-mwcdx": "owned",
              "kubernetes.io/role/internal-elb": ""
            },
            "vpc_id": "vpc-01095835b1df30896"
          }
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:268558157000:subnet/subnet-003e0c57e7faae762",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3c",
            "availability_zone_id": "euw3-az3",
            "cidr_block": "10.0.192.0/19",
            "default_for_az": false,
            "id": "subnet-003e0c57e7faae762",
            "map_public_ip_on_launch": false,
            "owner_id": "268558157000",
            "state": "available",
            "tags": {
              "Name": "atlas-operator-mwcdx-private-eu-west-3c",
              "kubernetes.io/cluster/atlas-operator-mwcdx": "owned",
              "kubernetes.io/role/internal-elb": ""
            },
            "vpc_id": "vpc-01095835b1df30896"
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "data",
      "type": "aws_subnet",
      "name": "public",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:268558157000:subnet/subnet-0cb32a893e5f9f54f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "cidr_block": "10.0.0.0/19",
            "default_for_az": false,
            "id": "subnet-0cb32a893e5f9f54f",
            "map_public_ip_on_launch": false,
            "owner_id": "268558157000",
            "state": "available",
            "tags": {
              "Name": "atlas-operator-mwcdx-public-eu-west-3a",
              "kubernetes.io/cluster/atlas-operator-mwcdx": "owned"
            },
            "vpc_id": "vpc-01095835b1df30896"
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:268558157000:subnet/subnet-0d3eaab42501e7b00",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3b",
            "availability_zone_id": "euw3-az2",
            "cidr_block": "10.0.32.0/19",
            "default_for_az": false,
            "id": "subnet-0d3eaab42501e7b00",
            "map_public_ip_on_launch": false,
            "owner_id": "268558157000",
            "state": "available",
            "tags": {
              "Name": "atlas-operator-mwcdx-public-eu-west-3b",
              "kubernetes.io/cluster/atlas-operator-mwcdx": "owned"
            },
            "vpc_id": "vpc-01095835b1df30896"
          }
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:268558157000:subnet/subnet-00762966c3511d35c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3c",
            "availability_zone_id": "euw3-az3",
            "cidr_block": "10.0.64.0/19",
            "default_for_az": false,
            "id": "subnet-00762966c3511d35c",
            "map_public_ip_on_launch": false,
            "owner_id": "268558157000",
            "state": "available",
            "tags": {
              "Name": "atlas-operator-mwcdx-public-eu-west-3c",
              "kubernetes.io/cluster/atlas-operator-mwcdx": "owned"
            },
            "vpc_id": "vpc-01095835b1df30896"
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "data",
      "type": "aws_vpc",
      "name": "cluster_vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:268558157000:vpc/vpc-01095835b1df30896",
            "cidr_block": "10.0.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-013ae704c60b1fb8a",
                "cidr_block": "10.0.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-0bd620d1288de8565",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-01095835b1df30896",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-002994e3126112764",
            "owner_id": "268558157000",
            "state": "available",
            "tags": {
              "Name": "atlas-operator-mwcdx-vpc",
              "kubernetes.io/cluster/atlas-operator-mwcdx": "owned"
            }
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-08a166d58ffed8d87",
            "public_dns": "ec2-15-237-134-67.eu-west-3.compute.amazonaws.com",
            "public_ip": "15.237.134.67",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "atlas-operator-mwcdx-eip-eu-west-3a",
              "kubernetes.io/cluster/atlas-operator-mwcdx": "owned"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.new_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-0e4507db846fd55c2",
            "public_dns": "ec2-13-36-86-133.eu-west-3.compute.amazonaws.com",
            "public_ip": "13.36.86.133",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "atlas-operator-mwcdx-eip-eu-west-3b",
              "kubernetes.io/cluster/atlas-operator-mwcdx": "owned"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.new_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-0c0f4d213a758e268",
            "public_dns": "ec2-13-36-23-217.eu-west-3.compute.amazonaws.com",
            "public_ip": "13.36.23.217",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "atlas-operator-mwcdx-eip-eu-west-3c",
              "kubernetes.io/cluster/atlas-operator-mwcdx": "owned"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.masters",
      "mode": "managed",
      "type": "aws_instance",
      "name": "master",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-038f4ce9ea7ac7191",
            "arn": "arn:aws:ec2:eu-west-3:268558157000:instance/i-07b646f442403dffb",
            "associate_public_ip_address": false,
            "availability_zone": "eu-west-3a",
            "cpu_core_count": 2,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "atlas-operator-mwcdx-master-profile",
            "id": "i-07b646f442403dffb",
            "instance_state": "running",
            "instance_type": "t3.xlarge",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_interface_id": "eni-046261915d5d98f8d"
              }
            ],
            "primary_network_interface_id": "eni-046261915d5d98f8d",
            "private_dns": "ip-10-0-131-42.eu-west-3.compute.internal",
            "private_ip": "10.0.131.42",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": true,
                "iops": 360,
                "kms_key_id": "arn:aws:kms:eu-west-3:268558157000:key/35b2789f-5f02-412c-bd97-0e9a9a766580",
                "volume_id": "vol-0021e98a1d82c5935",
                "volume_size": 120,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04cda98e80626f47c",
            "tags": {
              "Name": "atlas-operator-mwcdx-master-0",
              "kubernetes.io/cluster/atlas-operator-mwcdx": "owned"
            },
            "tenancy": "default",
            "volume_tags": {
              "Name": "atlas-operator-mwcdx-master-0-vol",
              "kubernetes.io/cluster/atlas-operator-mwcdx": "owned"
            },
            "vpc_security_group_ids": [
              "sg-0c8969cd01ba7b06f"
            ]
          },
          "dependencies": [
            "aws_ami_copy.imported",
            "module.masters.aws_iam_instance_profile.master",
            "module.masters.aws_iam_role.master_role",
            "module.masters.aws_network_interface.master",
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_vpc.new_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-038f4ce9ea7ac7191",
            "arn": "arn:aws:ec2:eu-west-3:268558157000:instance/i-00b7132b849d40be5",
            "associate_public_ip_address": false,
            "availability_zone": "eu-west-3b",
            "cpu_core_count": 2,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "atlas-operator-mwcdx-master-profile",
            "id": "i-00b7132b849d40be5",
            "instance_state": "running",
            "instance_type": "t3.xlarge",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_interface_id": "eni-01bea4d31ca0306a4"
              }
            ],
            "primary_network_interface_id": "eni-01bea4d31ca0306a4",
            "private_dns": "ip-10-0-179-76.eu-west-3.compute.internal",
            "private_ip": "10.0.179.76",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": true,
                "iops": 360,
                "kms_key_id": "arn:aws:kms:eu-west-3:268558157000:key/35b2789f-5f02-412c-bd97-0e9a9a766580",
                "volume_id": "vol-0c75feaebad2d5206",
                "volume_size": 120,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b41b011d2aeb60f0",
            "tags": {
              "Name": "atlas-operator-mwcdx-master-1",
              "kubernetes.io/cluster/atlas-operator-mwcdx": "owned"
            },
            "tenancy": "default",
            "volume_tags": {
              "Name": "atlas-operator-mwcdx-master-1-vol",
              "kubernetes.io/cluster/atlas-operator-mwcdx": "owned"
            },
            "vpc_security_group_ids": [
              "sg-0c8969cd01ba7b06f"
            ]
          },
          "dependencies": [
            "aws_ami_copy.imported",
            "module.masters.aws_iam_instance_profile.master",
            "module.masters.aws_iam_role.master_role",
            "module.masters.aws_network_interface.master",
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_vpc.new_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-038f4ce9ea7ac7191",
            "arn": "arn:aws:ec2:eu-west-3:268558157000:instance/i-0af060f77553df4b7",
            "associate_public_ip_address": false,
            "availability_zone": "eu-west-3c",
            "cpu_core_count": 2,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "atlas-operator-mwcdx-master-profile",
            "id": "i-0af060f77553df4b7",
            "instance_state": "running",
            "instance_type": "t3.xlarge",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_interface_id": "eni-095a6ba422efe298e"
              }
            ],
            "primary_network_interface_id": "eni-095a6ba422efe298e",
            "private_dns": "ip-10-0-205-198.eu-west-3.compute.internal",
            "private_ip": "10.0.205.198",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": true,
                "iops": 360,
                "kms_key_id": "arn:aws:kms:eu-west-3:268558157000:key/35b2789f-5f02-412c-bd97-0e9a9a766580",
                "volume_id": "vol-0dd62f1b14ad096e9",
                "volume_size": 120,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-003e0c57e7faae762",
            "tags": {
              "Name": "atlas-operator-mwcdx-master-2",
              "kubernetes.io/cluster/atlas-operator-mwcdx": "owned"
            },
            "tenancy": "default",
            "volume_tags": {
              "Name": "atlas-operator-mwcdx-master-2-vol",
              "kubernetes.io/cluster/atlas-operator-mwcdx": "owned"
            },
            "vpc_security_group_ids": [
              "sg-0c8969cd01ba7b06f"
            ]
          },
          "dependencies": [
            "aws_ami_copy.imported",
            "module.masters.aws_iam_instance_profile.master",
            "module.masters.aws_iam_role.master_role",
            "module.masters.aws_network_interface.master",
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:268558157000:internet-gateway/igw-04c74bb98b637a48c",
            "id": "igw-04c74bb98b637a48c",
            "owner_id": "268558157000",
            "tags": {
              "Name": "atlas-operator-mwcdx-igw",
              "kubernetes.io/cluster/atlas-operator-mwcdx": "owned"
            },
            "vpc_id": "vpc-01095835b1df30896"
          },
          "dependencies": [
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_lb",
      "name": "api_external",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-3:268558157000:loadbalancer/net/atlas-operator-mwcdx-ext/0f216ba29b6f3dd8",
            "arn_suffix": "net/atlas-operator-mwcdx-ext/0f216ba29b6f3dd8",
            "dns_name": "atlas-operator-mwcdx-ext-0f216ba29b6f3dd8.elb.eu-west-3.amazonaws.com",
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-3:268558157000:loadbalancer/net/atlas-operator-mwcdx-ext/0f216ba29b6f3dd8",
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "network",
            "name": "atlas-operator-mwcdx-ext",
            "subnet_mapping": [
              {
                "subnet_id": "subnet-00762966c3511d35c"
              },
              {
                "subnet_id": "subnet-0cb32a893e5f9f54f"
              },
              {
                "subnet_id": "subnet-0d3eaab42501e7b00"
              }
            ],
            "subnets": [
              "subnet-00762966c3511d35c",
              "subnet-0cb32a893e5f9f54f",
              "subnet-0d3eaab42501e7b00"
            ],
            "tags": {
              "Name": "atlas-operator-mwcdx-ext",
              "kubernetes.io/cluster/atlas-operator-mwcdx": "owned"
            },
            "timeouts": {
              "create": "20m"
            },
            "vpc_id": "vpc-01095835b1df30896",
            "zone_id": "Z1CMS0P5QUZ6D5"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_lb",
      "name": "api_internal",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-3:268558157000:loadbalancer/net/atlas-operator-mwcdx-int/d3bc22a211002d2e",
            "arn_suffix": "net/atlas-operator-mwcdx-int/d3bc22a211002d2e",
            "dns_name": "atlas-operator-mwcdx-int-d3bc22a211002d2e.elb.eu-west-3.amazonaws.com",
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-3:268558157000:loadbalancer/net/atlas-operator-mwcdx-int/d3bc22a211002d2e",
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "network",
            "name": "atlas-operator-mwcdx-int",
            "subnet_mapping": [
              {
                "subnet_id": "subnet-003e0c57e7faae762"
              },
              {
                "subnet_id": "subnet-04cda98e80626f47c"
              },
              {
                "subnet_id": "subnet-0b41b011d2aeb60f0"
              }
            ],
            "subnets": [
              "subnet-003e0c57e7faae762",
              "subnet-04cda98e80626f47c",
              "subnet-0b41b011d2aeb60f0"
            ],
            "tags": {
              "Name": "atlas-operator-mwcdx-int",
              "kubernetes.io/cluster/atlas-operator-mwcdx": "owned"
            },
            "timeouts": {
              "create": "20m"
            },
            "vpc_id": "vpc-01095835b1df30896",
            "zone_id": "Z1CMS0P5QUZ6D5"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "api_external_api",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-3:268558157000:listener/net/atlas-operator-mwcdx-ext/0f216ba29b6f3dd8/e2d9b33e61e7364e",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-3:268558157000:targetgroup/atlas-operator-mwcdx-aext/317d998c038e31b0",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-3:268558157000:listener/net/atlas-operator-mwcdx-ext/0f216ba29b6f3dd8/e2d9b33e61e7364e",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-3:268558157000:loadbalancer/net/atlas-operator-mwcdx-ext/0f216ba29b6f3dd8",
            "port": 6443,
            "protocol": "TCP",
            "ssl_policy": "",
            "timeouts": null
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_lb.api_external",
            "module.vpc.aws_lb_target_group.api_external",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "api_internal_api",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-3:268558157000:listener/net/atlas-operator-mwcdx-int/d3bc22a211002d2e/569afa15e838edb0",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-3:268558157000:targetgroup/atlas-operator-mwcdx-aint/af57dac98d54f587",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-3:268558157000:listener/net/atlas-operator-mwcdx-int/d3bc22a211002d2e/569afa15e838edb0",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-3:268558157000:loadbalancer/net/atlas-operator-mwcdx-int/d3bc22a211002d2e",
            "port": 6443,
            "protocol": "TCP",
            "ssl_policy": "",
            "timeouts": null
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_lb.api_internal",
            "module.vpc.aws_lb_target_group.api_internal",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "api_internal_services",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-3:268558157000:listener/net/atlas-operator-mwcdx-int/d3bc22a211002d2e/28399bf48274e650",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-3:268558157000:targetgroup/atlas-operator-mwcdx-sint/4d6741267d8196f7",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-3:268558157000:listener/net/atlas-operator-mwcdx-int/d3bc22a211002d2e/28399bf48274e650",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-3:268558157000:loadbalancer/net/atlas-operator-mwcdx-int/d3bc22a211002d2e",
            "port": 22623,
            "protocol": "TCP",
            "ssl_policy": "",
            "timeouts": null
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_lb.api_internal",
            "module.vpc.aws_lb_target_group.services",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "api_external",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-3:268558157000:targetgroup/atlas-operator-mwcdx-aext/317d998c038e31b0",
            "arn_suffix": "targetgroup/atlas-operator-mwcdx-aext/317d998c038e31b0",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 10,
                "matcher": "200-399",
                "path": "/readyz",
                "port": "6443",
                "protocol": "HTTPS",
                "timeout": 10,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-3:268558157000:targetgroup/atlas-operator-mwcdx-aext/317d998c038e31b0",
            "lambda_multi_value_headers_enabled": false,
            "name": "atlas-operator-mwcdx-aext",
            "port": 6443,
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "tags": {
              "Name": "atlas-operator-mwcdx-aext",
              "kubernetes.io/cluster/atlas-operator-mwcdx": "owned"
            },
            "target_type": "ip",
            "vpc_id": "vpc-01095835b1df30896"
          },
          "dependencies": [
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "api_internal",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-3:268558157000:targetgroup/atlas-operator-mwcdx-aint/af57dac98d54f587",
            "arn_suffix": "targetgroup/atlas-operator-mwcdx-aint/af57dac98d54f587",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 10,
                "matcher": "200-399",
                "path": "/readyz",
                "port": "6443",
                "protocol": "HTTPS",
                "timeout": 10,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-3:268558157000:targetgroup/atlas-operator-mwcdx-aint/af57dac98d54f587",
            "lambda_multi_value_headers_enabled": false,
            "name": "atlas-operator-mwcdx-aint",
            "port": 6443,
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "tags": {
              "Name": "atlas-operator-mwcdx-aint",
              "kubernetes.io/cluster/atlas-operator-mwcdx": "owned"
            },
            "target_type": "ip",
            "vpc_id": "vpc-01095835b1df30896"
          },
          "dependencies": [
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "services",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-3:268558157000:targetgroup/atlas-operator-mwcdx-sint/4d6741267d8196f7",
            "arn_suffix": "targetgroup/atlas-operator-mwcdx-sint/4d6741267d8196f7",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 10,
                "matcher": "200-399",
                "path": "/healthz",
                "port": "22623",
                "protocol": "HTTPS",
                "timeout": 10,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-3:268558157000:targetgroup/atlas-operator-mwcdx-sint/4d6741267d8196f7",
            "lambda_multi_value_headers_enabled": false,
            "name": "atlas-operator-mwcdx-sint",
            "port": 22623,
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "tags": {
              "Name": "atlas-operator-mwcdx-sint",
              "kubernetes.io/cluster/atlas-operator-mwcdx": "owned"
            },
            "target_type": "ip",
            "vpc_id": "vpc-01095835b1df30896"
          },
          "dependencies": [
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.masters",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "master",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-west-3:268558157000:targetgroup/atlas-operator-mwcdx-aint/af57dac98d54f587-2021030815143087710000000e",
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-3:268558157000:targetgroup/atlas-operator-mwcdx-aint/af57dac98d54f587",
            "target_id": "10.0.131.42"
          },
          "dependencies": [
            "aws_ami_copy.imported",
            "module.masters.aws_iam_instance_profile.master",
            "module.masters.aws_iam_role.master_role",
            "module.masters.aws_instance.master",
            "module.masters.aws_network_interface.master",
            "module.vpc.aws_lb_target_group.api_external",
            "module.vpc.aws_lb_target_group.api_internal",
            "module.vpc.aws_lb_target_group.services",
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_vpc.new_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-west-3:268558157000:targetgroup/atlas-operator-mwcdx-sint/4d6741267d8196f7-20210308151430362100000007",
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-3:268558157000:targetgroup/atlas-operator-mwcdx-sint/4d6741267d8196f7",
            "target_id": "10.0.131.42"
          },
          "dependencies": [
            "aws_ami_copy.imported",
            "module.masters.aws_iam_instance_profile.master",
            "module.masters.aws_iam_role.master_role",
            "module.masters.aws_instance.master",
            "module.masters.aws_network_interface.master",
            "module.vpc.aws_lb_target_group.api_external",
            "module.vpc.aws_lb_target_group.api_internal",
            "module.vpc.aws_lb_target_group.services",
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_vpc.new_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-west-3:268558157000:targetgroup/atlas-operator-mwcdx-aext/317d998c038e31b0-2021030815143088360000000f",
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-3:268558157000:targetgroup/atlas-operator-mwcdx-aext/317d998c038e31b0",
            "target_id": "10.0.131.42"
          },
          "dependencies": [
            "aws_ami_copy.imported",
            "module.masters.aws_iam_instance_profile.master",
            "module.masters.aws_iam_role.master_role",
            "module.masters.aws_instance.master",
            "module.masters.aws_network_interface.master",
            "module.vpc.aws_lb_target_group.api_external",
            "module.vpc.aws_lb_target_group.api_internal",
            "module.vpc.aws_lb_target_group.services",
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_vpc.new_vpc"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-west-3:268558157000:targetgroup/atlas-operator-mwcdx-aint/af57dac98d54f587-2021030815143042010000000b",
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-3:268558157000:targetgroup/atlas-operator-mwcdx-aint/af57dac98d54f587",
            "target_id": "10.0.179.76"
          },
          "dependencies": [
            "aws_ami_copy.imported",
            "module.masters.aws_iam_instance_profile.master",
            "module.masters.aws_iam_role.master_role",
            "module.masters.aws_instance.master",
            "module.masters.aws_network_interface.master",
            "module.vpc.aws_lb_target_group.api_external",
            "module.vpc.aws_lb_target_group.api_internal",
            "module.vpc.aws_lb_target_group.services",
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_vpc.new_vpc"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-west-3:268558157000:targetgroup/atlas-operator-mwcdx-sint/4d6741267d8196f7-2021030815143085450000000c",
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-3:268558157000:targetgroup/atlas-operator-mwcdx-sint/4d6741267d8196f7",
            "target_id": "10.0.179.76"
          },
          "dependencies": [
            "aws_ami_copy.imported",
            "module.masters.aws_iam_instance_profile.master",
            "module.masters.aws_iam_role.master_role",
            "module.masters.aws_instance.master",
            "module.masters.aws_network_interface.master",
            "module.vpc.aws_lb_target_group.api_external",
            "module.vpc.aws_lb_target_group.api_internal",
            "module.vpc.aws_lb_target_group.services",
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_vpc.new_vpc"
          ]
        },
        {
          "index_key": 5,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-west-3:268558157000:targetgroup/atlas-operator-mwcdx-aext/317d998c038e31b0-20210308151430362200000008",
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-3:268558157000:targetgroup/atlas-operator-mwcdx-aext/317d998c038e31b0",
            "target_id": "10.0.179.76"
          },
          "dependencies": [
            "aws_ami_copy.imported",
            "module.masters.aws_iam_instance_profile.master",
            "module.masters.aws_iam_role.master_role",
            "module.masters.aws_instance.master",
            "module.masters.aws_network_interface.master",
            "module.vpc.aws_lb_target_group.api_external",
            "module.vpc.aws_lb_target_group.api_internal",
            "module.vpc.aws_lb_target_group.services",
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_vpc.new_vpc"
          ]
        },
        {
          "index_key": 6,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-west-3:268558157000:targetgroup/atlas-operator-mwcdx-aint/af57dac98d54f587-20210308151430371200000009",
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-3:268558157000:targetgroup/atlas-operator-mwcdx-aint/af57dac98d54f587",
            "target_id": "10.0.205.198"
          },
          "dependencies": [
            "aws_ami_copy.imported",
            "module.masters.aws_iam_instance_profile.master",
            "module.masters.aws_iam_role.master_role",
            "module.masters.aws_instance.master",
            "module.masters.aws_network_interface.master",
            "module.vpc.aws_lb_target_group.api_external",
            "module.vpc.aws_lb_target_group.api_internal",
            "module.vpc.aws_lb_target_group.services",
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_vpc.new_vpc"
          ]
        },
        {
          "index_key": 7,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-west-3:268558157000:targetgroup/atlas-operator-mwcdx-sint/4d6741267d8196f7-2021030815143038650000000a",
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-3:268558157000:targetgroup/atlas-operator-mwcdx-sint/4d6741267d8196f7",
            "target_id": "10.0.205.198"
          },
          "dependencies": [
            "aws_ami_copy.imported",
            "module.masters.aws_iam_instance_profile.master",
            "module.masters.aws_iam_role.master_role",
            "module.masters.aws_instance.master",
            "module.masters.aws_network_interface.master",
            "module.vpc.aws_lb_target_group.api_external",
            "module.vpc.aws_lb_target_group.api_internal",
            "module.vpc.aws_lb_target_group.services",
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_vpc.new_vpc"
          ]
        },
        {
          "index_key": 8,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-west-3:268558157000:targetgroup/atlas-operator-mwcdx-aext/317d998c038e31b0-2021030815143087030000000d",
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-3:268558157000:targetgroup/atlas-operator-mwcdx-aext/317d998c038e31b0",
            "target_id": "10.0.205.198"
          },
          "dependencies": [
            "aws_ami_copy.imported",
            "module.masters.aws_iam_instance_profile.master",
            "module.masters.aws_iam_role.master_role",
            "module.masters.aws_instance.master",
            "module.masters.aws_network_interface.master",
            "module.vpc.aws_lb_target_group.api_external",
            "module.vpc.aws_lb_target_group.api_internal",
            "module.vpc.aws_lb_target_group.services",
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_main_route_table_association",
      "name": "main_vpc_routes",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08be935f85ea4c398",
            "original_route_table_id": "rtb-06c21506ba85b4119",
            "route_table_id": "rtb-002994e3126112764",
            "vpc_id": "vpc-01095835b1df30896"
          },
          "dependencies": [
            "module.vpc.aws_route_table.default",
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gw",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08a166d58ffed8d87",
            "id": "nat-0e0bc384c4ae2edf1",
            "network_interface_id": "eni-0021af46ba858fc3f",
            "private_ip": "10.0.10.57",
            "public_ip": "15.237.134.67",
            "subnet_id": "subnet-0cb32a893e5f9f54f",
            "tags": {
              "Name": "atlas-operator-mwcdx-nat-eu-west-3a",
              "kubernetes.io/cluster/atlas-operator-mwcdx": "owned"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.new_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e4507db846fd55c2",
            "id": "nat-046d605c291ec708b",
            "network_interface_id": "eni-077a0e6b8108daa16",
            "private_ip": "10.0.50.42",
            "public_ip": "13.36.86.133",
            "subnet_id": "subnet-0d3eaab42501e7b00",
            "tags": {
              "Name": "atlas-operator-mwcdx-nat-eu-west-3b",
              "kubernetes.io/cluster/atlas-operator-mwcdx": "owned"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.new_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c0f4d213a758e268",
            "id": "nat-03a00aed849dad830",
            "network_interface_id": "eni-0608770490673250e",
            "private_ip": "10.0.86.248",
            "public_ip": "13.36.23.217",
            "subnet_id": "subnet-00762966c3511d35c",
            "tags": {
              "Name": "atlas-operator-mwcdx-nat-eu-west-3c",
              "kubernetes.io/cluster/atlas-operator-mwcdx": "owned"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.masters",
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "master",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "eni-046261915d5d98f8d",
            "mac_address": "06:2d:f8:f9:36:a6",
            "private_dns_name": "ip-10-0-131-42.eu-west-3.compute.internal",
            "private_ip": "10.0.131.42",
            "private_ips": [
              "10.0.131.42"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0c8969cd01ba7b06f"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04cda98e80626f47c",
            "tags": {
              "Name": "atlas-operator-mwcdx-master-0",
              "kubernetes.io/cluster/atlas-operator-mwcdx": "owned"
            }
          },
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_vpc.new_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "eni-01bea4d31ca0306a4",
            "mac_address": "0a:f6:75:18:9d:ba",
            "private_dns_name": "ip-10-0-179-76.eu-west-3.compute.internal",
            "private_ip": "10.0.179.76",
            "private_ips": [
              "10.0.179.76"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0c8969cd01ba7b06f"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b41b011d2aeb60f0",
            "tags": {
              "Name": "atlas-operator-mwcdx-master-1",
              "kubernetes.io/cluster/atlas-operator-mwcdx": "owned"
            }
          },
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_vpc.new_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "eni-095a6ba422efe298e",
            "mac_address": "0e:71:8e:77:57:d4",
            "private_dns_name": "ip-10-0-205-198.eu-west-3.compute.internal",
            "private_ip": "10.0.205.198",
            "private_ips": [
              "10.0.205.198"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0c8969cd01ba7b06f"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-003e0c57e7faae762",
            "tags": {
              "Name": "atlas-operator-mwcdx-master-2",
              "kubernetes.io/cluster/atlas-operator-mwcdx": "owned"
            }
          },
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "igw_route",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-04c74bb98b637a48c",
            "id": "r-rtb-002994e31261127641080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-002994e3126112764",
            "state": "active",
            "timeouts": {
              "create": "20m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.default",
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "to_nat_gw",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0c82f432fc12ed6591080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "nat-0e0bc384c4ae2edf1",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0c82f432fc12ed659",
            "state": "active",
            "timeouts": {
              "create": "20m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.nat_gw",
            "module.vpc.aws_route_table.private_routes",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.new_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-002306b7441779c9b1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "nat-046d605c291ec708b",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-002306b7441779c9b",
            "state": "active",
            "timeouts": {
              "create": "20m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.nat_gw",
            "module.vpc.aws_route_table.private_routes",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.new_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-061c71ffef947c4541080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "nat-03a00aed849dad830",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-061c71ffef947c454",
            "state": "active",
            "timeouts": {
              "create": "20m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.nat_gw",
            "module.vpc.aws_route_table.private_routes",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "default",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-002994e3126112764",
            "owner_id": "268558157000",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "atlas-operator-mwcdx-public",
              "kubernetes.io/cluster/atlas-operator-mwcdx": "owned"
            },
            "vpc_id": "vpc-01095835b1df30896"
          },
          "dependencies": [
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_routes",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0c82f432fc12ed659",
            "owner_id": "268558157000",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "atlas-operator-mwcdx-private-eu-west-3a",
              "kubernetes.io/cluster/atlas-operator-mwcdx": "owned"
            },
            "vpc_id": "vpc-01095835b1df30896"
          },
          "dependencies": [
            "module.vpc.aws_vpc.new_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-002306b7441779c9b",
            "owner_id": "268558157000",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "atlas-operator-mwcdx-private-eu-west-3b",
              "kubernetes.io/cluster/atlas-operator-mwcdx": "owned"
            },
            "vpc_id": "vpc-01095835b1df30896"
          },
          "dependencies": [
            "module.vpc.aws_vpc.new_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-061c71ffef947c454",
            "owner_id": "268558157000",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "atlas-operator-mwcdx-private-eu-west-3c",
              "kubernetes.io/cluster/atlas-operator-mwcdx": "owned"
            },
            "vpc_id": "vpc-01095835b1df30896"
          },
          "dependencies": [
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_routing",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dd724fae88d08586",
            "route_table_id": "rtb-0c82f432fc12ed659",
            "subnet_id": "subnet-04cda98e80626f47c"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private_routes",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_vpc.new_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00457443939d8fdc8",
            "route_table_id": "rtb-002306b7441779c9b",
            "subnet_id": "subnet-0b41b011d2aeb60f0"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private_routes",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_vpc.new_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-006a0e7f64cc41002",
            "route_table_id": "rtb-061c71ffef947c454",
            "subnet_id": "subnet-003e0c57e7faae762"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private_routes",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route_net",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0570dfd355481e887",
            "route_table_id": "rtb-002994e3126112764",
            "subnet_id": "subnet-0cb32a893e5f9f54f"
          },
          "dependencies": [
            "module.vpc.aws_route_table.default",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.new_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-067f3ae275f0c83f3",
            "route_table_id": "rtb-002994e3126112764",
            "subnet_id": "subnet-0d3eaab42501e7b00"
          },
          "dependencies": [
            "module.vpc.aws_route_table.default",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.new_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00f23081be22498a4",
            "route_table_id": "rtb-002994e3126112764",
            "subnet_id": "subnet-00762966c3511d35c"
          },
          "dependencies": [
            "module.vpc.aws_route_table.default",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "master",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:268558157000:security-group/sg-0c8969cd01ba7b06f",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c8969cd01ba7b06f",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 22623,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22623
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 6443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 6443
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "50",
                "security_groups": [
                  "sg-041315ab2d5d385be"
                ],
                "self": true,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 10250,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-041315ab2d5d385be"
                ],
                "self": true,
                "to_port": 10250
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 10257,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-041315ab2d5d385be"
                ],
                "self": true,
                "to_port": 10257
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 10259,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-041315ab2d5d385be"
                ],
                "self": true,
                "to_port": 10259
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 2379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 2380
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 30000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-041315ab2d5d385be"
                ],
                "self": true,
                "to_port": 32767
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 30000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [
                  "sg-041315ab2d5d385be"
                ],
                "self": true,
                "to_port": 32767
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 4500,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [
                  "sg-041315ab2d5d385be"
                ],
                "self": true,
                "to_port": 4500
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 4789,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [
                  "sg-041315ab2d5d385be"
                ],
                "self": true,
                "to_port": 4789
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 500,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [
                  "sg-041315ab2d5d385be"
                ],
                "self": true,
                "to_port": 500
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 6081,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [
                  "sg-041315ab2d5d385be"
                ],
                "self": true,
                "to_port": 6081
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 6641,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-041315ab2d5d385be"
                ],
                "self": true,
                "to_port": 6642
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 9000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-041315ab2d5d385be"
                ],
                "self": true,
                "to_port": 9999
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 9000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [
                  "sg-041315ab2d5d385be"
                ],
                "self": true,
                "to_port": 9999
              }
            ],
            "name": "terraform-20210308151332450200000002",
            "name_prefix": null,
            "owner_id": "268558157000",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "atlas-operator-mwcdx-master-sg",
              "kubernetes.io/cluster/atlas-operator-mwcdx": "owned"
            },
            "timeouts": {
              "create": "20m",
              "delete": null
            },
            "vpc_id": "vpc-01095835b1df30896"
          },
          "dependencies": [
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "worker",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:268558157000:security-group/sg-041315ab2d5d385be",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-041315ab2d5d385be",
            "ingress": [],
            "name": "terraform-20210308151331925100000001",
            "name_prefix": null,
            "owner_id": "268558157000",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "atlas-operator-mwcdx-worker-sg",
              "kubernetes.io/cluster/atlas-operator-mwcdx": "owned"
            },
            "timeouts": {
              "create": "20m",
              "delete": null
            },
            "vpc_id": "vpc-01095835b1df30896"
          },
          "dependencies": [
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_egress",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-1541125736",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0c8969cd01ba7b06f",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_esp",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 0,
            "id": "sgrule-3405530076",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "50",
            "security_group_id": "sg-0c8969cd01ba7b06f",
            "self": true,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "ingress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_esp_from_worker",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 0,
            "id": "sgrule-2591925733",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "50",
            "security_group_id": "sg-0c8969cd01ba7b06f",
            "self": false,
            "source_security_group_id": "sg-041315ab2d5d385be",
            "to_port": 0,
            "type": "ingress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_security_group.worker",
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_etcd",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 2379,
            "id": "sgrule-2135001579",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0c8969cd01ba7b06f",
            "self": true,
            "source_security_group_id": null,
            "to_port": 2380,
            "type": "ingress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_geneve",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 6081,
            "id": "sgrule-1995052581",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-0c8969cd01ba7b06f",
            "self": true,
            "source_security_group_id": null,
            "to_port": 6081,
            "type": "ingress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_geneve_from_worker",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 6081,
            "id": "sgrule-644608028",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-0c8969cd01ba7b06f",
            "self": false,
            "source_security_group_id": "sg-041315ab2d5d385be",
            "to_port": 6081,
            "type": "ingress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_security_group.worker",
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_https",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.0.0/16"
            ],
            "description": null,
            "from_port": 6443,
            "id": "sgrule-3087092960",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0c8969cd01ba7b06f",
            "self": false,
            "source_security_group_id": null,
            "to_port": 6443,
            "type": "ingress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_icmp",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.0.0/16"
            ],
            "description": null,
            "from_port": -1,
            "id": "sgrule-652367452",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "icmp",
            "security_group_id": "sg-0c8969cd01ba7b06f",
            "self": false,
            "source_security_group_id": null,
            "to_port": -1,
            "type": "ingress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_ike",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 500,
            "id": "sgrule-3795946560",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-0c8969cd01ba7b06f",
            "self": true,
            "source_security_group_id": null,
            "to_port": 500,
            "type": "ingress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_ike_from_worker",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 500,
            "id": "sgrule-2998954617",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-0c8969cd01ba7b06f",
            "self": false,
            "source_security_group_id": "sg-041315ab2d5d385be",
            "to_port": 500,
            "type": "ingress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_security_group.worker",
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_ike_nat_t",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 4500,
            "id": "sgrule-1105692593",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-0c8969cd01ba7b06f",
            "self": true,
            "source_security_group_id": null,
            "to_port": 4500,
            "type": "ingress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_ike_nat_t_from_worker",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 4500,
            "id": "sgrule-291922312",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-0c8969cd01ba7b06f",
            "self": false,
            "source_security_group_id": "sg-041315ab2d5d385be",
            "to_port": 4500,
            "type": "ingress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_security_group.worker",
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_internal",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 9000,
            "id": "sgrule-2390605683",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0c8969cd01ba7b06f",
            "self": true,
            "source_security_group_id": null,
            "to_port": 9999,
            "type": "ingress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_internal_from_worker",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 9000,
            "id": "sgrule-3741079882",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0c8969cd01ba7b06f",
            "self": false,
            "source_security_group_id": "sg-041315ab2d5d385be",
            "to_port": 9999,
            "type": "ingress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_security_group.worker",
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_internal_from_worker_udp",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 9000,
            "id": "sgrule-2057566885",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-0c8969cd01ba7b06f",
            "self": false,
            "source_security_group_id": "sg-041315ab2d5d385be",
            "to_port": 9999,
            "type": "ingress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_security_group.worker",
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_internal_udp",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 9000,
            "id": "sgrule-706878620",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-0c8969cd01ba7b06f",
            "self": true,
            "source_security_group_id": null,
            "to_port": 9999,
            "type": "ingress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_kube_controller_manager",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 10257,
            "id": "sgrule-2490293399",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0c8969cd01ba7b06f",
            "self": true,
            "source_security_group_id": null,
            "to_port": 10257,
            "type": "ingress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_kube_controller_manager_from_worker",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 10257,
            "id": "sgrule-3304012462",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0c8969cd01ba7b06f",
            "self": false,
            "source_security_group_id": "sg-041315ab2d5d385be",
            "to_port": 10257,
            "type": "ingress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_security_group.worker",
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_kube_scheduler",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 10259,
            "id": "sgrule-1424144404",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0c8969cd01ba7b06f",
            "self": true,
            "source_security_group_id": null,
            "to_port": 10259,
            "type": "ingress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_kube_scheduler_from_worker",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 10259,
            "id": "sgrule-73621037",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0c8969cd01ba7b06f",
            "self": false,
            "source_security_group_id": "sg-041315ab2d5d385be",
            "to_port": 10259,
            "type": "ingress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_security_group.worker",
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_kubelet_secure",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 10250,
            "id": "sgrule-428895734",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0c8969cd01ba7b06f",
            "self": true,
            "source_security_group_id": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_kubelet_secure_from_worker",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 10250,
            "id": "sgrule-1225886671",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0c8969cd01ba7b06f",
            "self": false,
            "source_security_group_id": "sg-041315ab2d5d385be",
            "to_port": 10250,
            "type": "ingress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_security_group.worker",
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_ovndb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 6641,
            "id": "sgrule-914827436",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0c8969cd01ba7b06f",
            "self": true,
            "source_security_group_id": null,
            "to_port": 6642,
            "type": "ingress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_ovndb_from_worker",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 6641,
            "id": "sgrule-1711722133",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0c8969cd01ba7b06f",
            "self": false,
            "source_security_group_id": "sg-041315ab2d5d385be",
            "to_port": 6642,
            "type": "ingress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_security_group.worker",
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_services_tcp",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 30000,
            "id": "sgrule-4202506367",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0c8969cd01ba7b06f",
            "self": true,
            "source_security_group_id": null,
            "to_port": 32767,
            "type": "ingress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_services_tcp_from_worker",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 30000,
            "id": "sgrule-2868694598",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0c8969cd01ba7b06f",
            "self": false,
            "source_security_group_id": "sg-041315ab2d5d385be",
            "to_port": 32767,
            "type": "ingress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_security_group.worker",
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_services_udp",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 30000,
            "id": "sgrule-1579322256",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-0c8969cd01ba7b06f",
            "self": true,
            "source_security_group_id": null,
            "to_port": 32767,
            "type": "ingress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_services_udp_from_worker",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 30000,
            "id": "sgrule-245591465",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-0c8969cd01ba7b06f",
            "self": false,
            "source_security_group_id": "sg-041315ab2d5d385be",
            "to_port": 32767,
            "type": "ingress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_security_group.worker",
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_ssh",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.0.0/16"
            ],
            "description": null,
            "from_port": 22,
            "id": "sgrule-1830851794",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0c8969cd01ba7b06f",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_vxlan",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 4789,
            "id": "sgrule-4196558621",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-0c8969cd01ba7b06f",
            "self": true,
            "source_security_group_id": null,
            "to_port": 4789,
            "type": "ingress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_vxlan_from_worker",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 4789,
            "id": "sgrule-2862842148",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-0c8969cd01ba7b06f",
            "self": false,
            "source_security_group_id": "sg-041315ab2d5d385be",
            "to_port": 4789,
            "type": "ingress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_security_group.worker",
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_mcs",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.0.0/16"
            ],
            "description": null,
            "from_port": 22623,
            "id": "sgrule-4285711353",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0c8969cd01ba7b06f",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22623,
            "type": "ingress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "worker_egress",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-49364016",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-041315ab2d5d385be",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.worker",
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "worker_ingress_esp",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 0,
            "id": "sgrule-1647754409",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "50",
            "security_group_id": "sg-041315ab2d5d385be",
            "self": true,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "ingress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.worker",
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "worker_ingress_esp_from_master",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 0,
            "id": "sgrule-850877072",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "50",
            "security_group_id": "sg-041315ab2d5d385be",
            "self": false,
            "source_security_group_id": "sg-0c8969cd01ba7b06f",
            "to_port": 0,
            "type": "ingress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_security_group.worker",
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "worker_ingress_geneve",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 6081,
            "id": "sgrule-1372275507",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-041315ab2d5d385be",
            "self": true,
            "source_security_group_id": null,
            "to_port": 6081,
            "type": "ingress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.worker",
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "worker_ingress_geneve_from_master",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 6081,
            "id": "sgrule-21669130",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-041315ab2d5d385be",
            "self": false,
            "source_security_group_id": "sg-0c8969cd01ba7b06f",
            "to_port": 6081,
            "type": "ingress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_security_group.worker",
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "worker_ingress_icmp",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.0.0/16"
            ],
            "description": null,
            "from_port": -1,
            "id": "sgrule-4073103650",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "icmp",
            "security_group_id": "sg-041315ab2d5d385be",
            "self": false,
            "source_security_group_id": null,
            "to_port": -1,
            "type": "ingress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.worker",
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "worker_ingress_ike",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 500,
            "id": "sgrule-1449069213",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-041315ab2d5d385be",
            "self": true,
            "source_security_group_id": null,
            "to_port": 500,
            "type": "ingress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.worker",
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "worker_ingress_ike_from_master",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 500,
            "id": "sgrule-115272868",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-041315ab2d5d385be",
            "self": false,
            "source_security_group_id": "sg-0c8969cd01ba7b06f",
            "to_port": 500,
            "type": "ingress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_security_group.worker",
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "worker_ingress_ike_nat_t",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 4500,
            "id": "sgrule-1724306087",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-041315ab2d5d385be",
            "self": true,
            "source_security_group_id": null,
            "to_port": 4500,
            "type": "ingress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.worker",
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "worker_ingress_internal",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 9000,
            "id": "sgrule-2841438821",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-041315ab2d5d385be",
            "self": true,
            "source_security_group_id": null,
            "to_port": 9999,
            "type": "ingress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.worker",
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "worker_ingress_internal_from_master",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 9000,
            "id": "sgrule-4192013404",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-041315ab2d5d385be",
            "self": false,
            "source_security_group_id": "sg-0c8969cd01ba7b06f",
            "to_port": 9999,
            "type": "ingress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_security_group.worker",
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "worker_ingress_internal_from_master_udp",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 9000,
            "id": "sgrule-1568845747",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-041315ab2d5d385be",
            "self": false,
            "source_security_group_id": "sg-0c8969cd01ba7b06f",
            "to_port": 9999,
            "type": "ingress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_security_group.worker",
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "worker_ingress_internal_udp",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 9000,
            "id": "sgrule-218319242",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-041315ab2d5d385be",
            "self": true,
            "source_security_group_id": null,
            "to_port": 9999,
            "type": "ingress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.worker",
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "worker_ingress_kubelet_insecure",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 10250,
            "id": "sgrule-157623860",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-041315ab2d5d385be",
            "self": true,
            "source_security_group_id": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.worker",
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "worker_ingress_kubelet_insecure_from_master",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 10250,
            "id": "sgrule-1508163597",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-041315ab2d5d385be",
            "self": false,
            "source_security_group_id": "sg-0c8969cd01ba7b06f",
            "to_port": 10250,
            "type": "ingress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_security_group.worker",
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "worker_ingress_nat_t_from_master",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 4500,
            "id": "sgrule-910636190",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-041315ab2d5d385be",
            "self": false,
            "source_security_group_id": "sg-0c8969cd01ba7b06f",
            "to_port": 4500,
            "type": "ingress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_security_group.worker",
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "worker_ingress_services_tcp",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 30000,
            "id": "sgrule-3934806973",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-041315ab2d5d385be",
            "self": true,
            "source_security_group_id": null,
            "to_port": 32767,
            "type": "ingress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.worker",
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "worker_ingress_services_tcp_from_master",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 30000,
            "id": "sgrule-3121186180",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-041315ab2d5d385be",
            "self": false,
            "source_security_group_id": "sg-0c8969cd01ba7b06f",
            "to_port": 32767,
            "type": "ingress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_security_group.worker",
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "worker_ingress_services_udp",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 30000,
            "id": "sgrule-1322762322",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-041315ab2d5d385be",
            "self": true,
            "source_security_group_id": null,
            "to_port": 32767,
            "type": "ingress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.worker",
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "worker_ingress_services_udp_from_master",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 30000,
            "id": "sgrule-508962411",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-041315ab2d5d385be",
            "self": false,
            "source_security_group_id": "sg-0c8969cd01ba7b06f",
            "to_port": 32767,
            "type": "ingress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_security_group.worker",
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "worker_ingress_ssh",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.0.0/16"
            ],
            "description": null,
            "from_port": 22,
            "id": "sgrule-3932359237",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-041315ab2d5d385be",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.worker",
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "worker_ingress_vxlan",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 4789,
            "id": "sgrule-3707974155",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-041315ab2d5d385be",
            "self": true,
            "source_security_group_id": null,
            "to_port": 4789,
            "type": "ingress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.worker",
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "worker_ingress_vxlan_from_master",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 4789,
            "id": "sgrule-2374161458",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-041315ab2d5d385be",
            "self": false,
            "source_security_group_id": "sg-0c8969cd01ba7b06f",
            "to_port": 4789,
            "type": "ingress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_security_group.worker",
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:268558157000:subnet/subnet-04cda98e80626f47c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "cidr_block": "10.0.128.0/19",
            "id": "subnet-04cda98e80626f47c",
            "map_public_ip_on_launch": false,
            "owner_id": "268558157000",
            "tags": {
              "Name": "atlas-operator-mwcdx-private-eu-west-3a",
              "kubernetes.io/cluster/atlas-operator-mwcdx": "owned",
              "kubernetes.io/role/internal-elb": ""
            },
            "vpc_id": "vpc-01095835b1df30896"
          },
          "dependencies": [
            "module.vpc.aws_vpc.new_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:268558157000:subnet/subnet-0b41b011d2aeb60f0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3b",
            "availability_zone_id": "euw3-az2",
            "cidr_block": "10.0.160.0/19",
            "id": "subnet-0b41b011d2aeb60f0",
            "map_public_ip_on_launch": false,
            "owner_id": "268558157000",
            "tags": {
              "Name": "atlas-operator-mwcdx-private-eu-west-3b",
              "kubernetes.io/cluster/atlas-operator-mwcdx": "owned",
              "kubernetes.io/role/internal-elb": ""
            },
            "vpc_id": "vpc-01095835b1df30896"
          },
          "dependencies": [
            "module.vpc.aws_vpc.new_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:268558157000:subnet/subnet-003e0c57e7faae762",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3c",
            "availability_zone_id": "euw3-az3",
            "cidr_block": "10.0.192.0/19",
            "id": "subnet-003e0c57e7faae762",
            "map_public_ip_on_launch": false,
            "owner_id": "268558157000",
            "tags": {
              "Name": "atlas-operator-mwcdx-private-eu-west-3c",
              "kubernetes.io/cluster/atlas-operator-mwcdx": "owned",
              "kubernetes.io/role/internal-elb": ""
            },
            "vpc_id": "vpc-01095835b1df30896"
          },
          "dependencies": [
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:268558157000:subnet/subnet-0cb32a893e5f9f54f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "cidr_block": "10.0.0.0/19",
            "id": "subnet-0cb32a893e5f9f54f",
            "map_public_ip_on_launch": false,
            "owner_id": "268558157000",
            "tags": {
              "Name": "atlas-operator-mwcdx-public-eu-west-3a",
              "kubernetes.io/cluster/atlas-operator-mwcdx": "owned"
            },
            "vpc_id": "vpc-01095835b1df30896"
          },
          "dependencies": [
            "module.vpc.aws_vpc.new_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:268558157000:subnet/subnet-0d3eaab42501e7b00",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3b",
            "availability_zone_id": "euw3-az2",
            "cidr_block": "10.0.32.0/19",
            "id": "subnet-0d3eaab42501e7b00",
            "map_public_ip_on_launch": false,
            "owner_id": "268558157000",
            "tags": {
              "Name": "atlas-operator-mwcdx-public-eu-west-3b",
              "kubernetes.io/cluster/atlas-operator-mwcdx": "owned"
            },
            "vpc_id": "vpc-01095835b1df30896"
          },
          "dependencies": [
            "module.vpc.aws_vpc.new_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:268558157000:subnet/subnet-00762966c3511d35c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3c",
            "availability_zone_id": "euw3-az3",
            "cidr_block": "10.0.64.0/19",
            "id": "subnet-00762966c3511d35c",
            "map_public_ip_on_launch": false,
            "owner_id": "268558157000",
            "tags": {
              "Name": "atlas-operator-mwcdx-public-eu-west-3c",
              "kubernetes.io/cluster/atlas-operator-mwcdx": "owned"
            },
            "vpc_id": "vpc-01095835b1df30896"
          },
          "dependencies": [
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "new_vpc",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:268558157000:vpc/vpc-01095835b1df30896",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0ede2dbdf0b4a55dc",
            "default_route_table_id": "rtb-002994e3126112764",
            "default_security_group_id": "sg-09b5ee4a7c79130e1",
            "dhcp_options_id": "dopt-0bd620d1288de8565",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-01095835b1df30896",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-002994e3126112764",
            "owner_id": "268558157000",
            "tags": {
              "Name": "atlas-operator-mwcdx-vpc",
              "kubernetes.io/cluster/atlas-operator-mwcdx": "owned"
            }
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "s3",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "cidr_blocks": [
              "3.5.224.0/22",
              "52.95.154.0/23",
              "52.95.156.0/24"
            ],
            "id": "vpce-0b5b104ec88bb1a3a",
            "owner_id": "268558157000",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-23ad484a",
            "private_dns_enabled": false,
            "requester_managed": false,
            "route_table_ids": [
              "rtb-002306b7441779c9b",
              "rtb-002994e3126112764",
              "rtb-061c71ffef947c454",
              "rtb-0c82f432fc12ed659"
            ],
            "service_name": "com.amazonaws.eu-west-3.s3",
            "state": "available",
            "tags": {
              "kubernetes.io/cluster/atlas-operator-mwcdx": "owned"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-01095835b1df30896"
          },
          "dependencies": [
            "module.vpc.aws_route_table.default",
            "module.vpc.aws_route_table.private_routes",
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    }
  ]
}